fixed shop disalign

--- a/styles/shop.css
+++ b/styles/shop.css
@@ -320,7 +320,7 @@
     }
 
     .s1-col1 {
-        width: 35%;
+        width: 34%;
         padding: 9% 0 0 0;
     }
 
